--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,4 +116,9 @@ dependencies {
      * Shimmer
      */
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    /**
+     * Paging 3
+     */
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
 }
