--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,12 +56,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.navigation:navigation-testing:2.4.2"
+    testImplementation 'org.conscrypt:conscrypt-openjdk-uber:2.5.1'
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    /**
+     * Testing
+     */
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "androidx.test:core-ktx:1.4.0"
 
     /**
      * jetpack
      */
-    implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
